--- a/index.html
+++ b/index.html
@@ -77,13 +77,17 @@
 </head>
 <body>
 
-  <div class="screen active" id="landingScreen" style="background: url('Portal background.png') no-repeat center center fixed; background-size: cover;">
-    <header><h1>San Andreas DMV</h1></header>
-    <div style="text-align: center;">
-      <button onclick="showScreen('loginScreen')">Login</button>
-      <button onclick="showScreen('signupScreen')">Sign Up</button>
-      <button onclick="employeeLogin()">Employee Portal</button>
-    </div>
+  
+  
+  <div class="screen active" id="landingScreen" style="background: url('Portal background.png') no-repeat center center fixed; background-size: cover; height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+    <header style="background: rgba(0,0,0,0.5); padding: 20px; border-radius: 10px;">
+      <h1 style="color: white;">San Andreas DMV Portal</h1>
+    </header>
+    <button onclick="showScreen('adminDashboard')" style="margin: 20px; padding: 15px 30px;">Employee Dashboard</button>
+    <button onclick="showScreen('loginScreen')" style="margin: 20px; padding: 15px 30px;">Front Desk</button>
+  </div>
+
+
   </div>
 
   <div class="screen" id="signupScreen">
