--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ const idRenewals = [];
     <h2>Select a Test Type</h2>
     <button onclick="alert('Launching Permit Test...')" style="margin: 15px; padding: 15px 30px;">Permit Test</button>
     <button onclick="alert('Launching Driver's License Test...')" style="margin: 15px; padding: 15px 30px;">Driver's License Test</button>
-    <button onclick="alert('Launching Motorcycle License Test...')" style="margin: 15px; padding: 15px 30px;">Motorcycle License Test</button>
+    <button onclick="window.open('https://forms.gle/85Wc6XAnKGewL1nr6', '_blank')" style="margin: 15px; padding: 15px 30px;">Motorcycle License Test</button>
     <button onclick="alert('Launching CDL Test...')" style="margin: 15px; padding: 15px 30px;">CDL Test</button>
     <br><br>
     <button onclick="showScreen('userDashboard')" style="margin-top: 40px;">Back</button>
@@ -442,7 +442,7 @@ const idRenewals = [];
     <h2>Select a Test Type</h2>
     <button onclick="alert('Launching Permit Test...')" style="margin: 15px; padding: 15px 30px;">Permit Test</button>
     <button onclick="alert('Launching Driver's License Test...')" style="margin: 15px; padding: 15px 30px;">Driver's License Test</button>
-    <button onclick="alert('Launching Motorcycle License Test...')" style="margin: 15px; padding: 15px 30px;">Motorcycle License Test</button>
+    <button onclick="window.open('https://forms.gle/85Wc6XAnKGewL1nr6', '_blank')" style="margin: 15px; padding: 15px 30px;">Motorcycle License Test</button>
     <button onclick="alert('Launching CDL Test...')" style="margin: 15px; padding: 15px 30px;">CDL Test</button>
     <br><br>
     <button onclick="showScreen('userDashboard')" style="margin-top: 40px;">Back</button>
