--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ const idRenewals = [];
 
   <div class="screen" id="testMenu" style="text-align: center; padding-top: 100px;">
     <h2>Select a Test Type</h2>
-    <button onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScreopcch0t6O6-IOh9eDPW7hDE8R3CgdFAYGkNh6I9ahhAGQ/viewform?usp=header', '_blank')" style="margin: 15px; padding: 15px 30px;">ID Application</button>
+    <button onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScreopcch0t6O6-IOh9eDPW7hDE8R3CgdFAYGkNh6I9ahhAGQ/viewform?usp=header', '_blank')" style="margin: 15px; padding: 15px 30px;">Permit Test</button>
     <button onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSerq21aZrcxm8krJiZ1_gPRdrcGutwtaqk40H5bUlBNJTrYsg/viewform?usp=header', '_blank')" style="margin: 15px; padding: 15px 30px;">Driver's License Test</button>
     <button onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScFhOLZWc6cE6R7cD5LWENC-pT3mk4hQe3kWNJ6TMXAPSr43Q/viewform?usp=header', '_blank')" style="margin: 15px; padding: 15px 30px;">Motorcycle License Test</button>
     <button onclick="alert('Launching CDL Test...')" style="margin: 15px; padding: 15px 30px;">CDL Test</button>
@@ -456,7 +456,7 @@ const idRenewals = [];
 
   <div class="screen" id="testMenu" style="text-align: center; padding-top: 100px;">
     <h2>Select a Test Type</h2>
-    <button onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScreopcch0t6O6-IOh9eDPW7hDE8R3CgdFAYGkNh6I9ahhAGQ/viewform?usp=header', '_blank')" style="margin: 15px; padding: 15px 30px;">ID Application</button>
+    <button onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScreopcch0t6O6-IOh9eDPW7hDE8R3CgdFAYGkNh6I9ahhAGQ/viewform?usp=header', '_blank')" style="margin: 15px; padding: 15px 30px;">Permit Test</button>
     <button onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSerq21aZrcxm8krJiZ1_gPRdrcGutwtaqk40H5bUlBNJTrYsg/viewform?usp=header', '_blank')" style="margin: 15px; padding: 15px 30px;">Driver's License Test</button>
     <button onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScFhOLZWc6cE6R7cD5LWENC-pT3mk4hQe3kWNJ6TMXAPSr43Q/viewform?usp=header', '_blank')" style="margin: 15px; padding: 15px 30px;">Motorcycle License Test</button>
     <button onclick="alert('Launching CDL Test...')" style="margin: 15px; padding: 15px 30px;">CDL Test</button>
